fix alignment

--- a/packages/lab/src/tree/TreeNode.css
+++ b/packages/lab/src/tree/TreeNode.css
@@ -36,7 +36,7 @@
 
 .saltTreeNode-icon {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   justify-content: center;
   width: var(--salt-size-selectable);
   min-width: var(--salt-size-selectable);
